# tracey

./: .gitignore  Cargo.toml  README.md
benches/: render_benchmark.rs
src/: camera.rs  lib.rs  load_mesh.rs  main.rs  render.rs  scene.rs
src/camera/: camera.rs  mod.rs
src/hittables/: axis_aligned_rects.rs  bounding_box.rs  bvh_node.rs  common.rs  flip_face.rs  mod.rs  sphere.rs  triangle.rs  world.rs  xy_rect.rs
src/linalg/: color.rs  mod.rs  onb.rs  ray.rs  vec3.rs
src/materials/: common.rs  default.rs  dielectric.rs  diffuse_light.rs  lambertian.rs  metal.rs  mod.rs  utils.rs
src/pdfs/: cosine.rs  hittable.rs  mixture.rs  mod.rs
