[package]
name = "rey_skytracer"
version = "0.1.0"
authors = ["Daniel Popa <danielpopacristobal@gmail.com>"]
edition = "2018"

[lib]
name = "rey_skytracer"
path = "src/lib.rs"

[[bin]]
name = "rey_skytracer"
path = "src/main.rs"

[dependencies]
image = "0.23"
rand = "0.7.3"
rayon = "1.1"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "render_benchmark"
harness = false
