[package]
name = "rey_skytracer"
version = "0.1.0"
authors = ["Daniel Popa <danielpopacristobal@gmail.com>"]
edition = "2018"

[lib]
name = "rey_skytracer"
path = "src/lib.rs"

[[bin]]
name = "rey_skytracer"
path = "src/main.rs"

[dependencies]
clap = "3.0.0-beta.2"
image = "0.23"
obj-rs = "0.6"
rand = "0.7.3"
rayon = "1.1"
