[package]
name = "tracey"
version = "0.1.0"
authors = ["Daniel Popa Cristobal <dpopacristobal@gmail.com>"]
edition = "2018"

[lib]
name = "tracey"
path = "src/lib.rs"

[[bin]]
name = "tracey"
path = "src/main.rs"

[dependencies]
image = "0.23"
obj-rs = "0.6"
rand = "0.7.3"
rayon = "1.1"
structopt = "0.3.22"
